# ai_garden

./: .cursorrules  .cursorrules_unused  .flowconfig  .gitignore  README.md  gpt4all.js  llama.js  modelconfig.json  package-lock.json  package.json  test_generate_chat.py
cacher/: README.md  demo.py  forward-test.py  requirements.txt  state_cacher.py  test_seeding.py
cacher-api/: README.md  package.json  tsconfig.json
cacher-api-node/src/: demo.ts
cacher-api/src/: StateCacher.ts
cacher-api/tests/: StateCacher.test.ts
explorer/: README.md  dir_summary.js  dir_summary.sh  uberdirsummary.bash  x.xml
friendly_input_field/: README.md  package.json
friendly_input_field/server/: server.js
llm-graph/: NODES.md  index.html
llm-graph/js/: websocket.js
llm-graph/server/: server.js  sourceProcessor.js
llm-graph/tests/: setup.js
llm-graph2/: index.html  webpack.config.js
llm-graph2/css/: styles.css
llm-graph2/server/: server.js
llm-graph2/src/: Menu.js  Node.js  Workspace.js  index.js
llm-graph3/: test.txt
llm-graph3/src/: styles.css  types.js
llm-graph4/: package-lock.json
llm-graph4/src/: App.tsx  styles.css
llm-graph5/: graph-state.json  nodemon.json  package-lock.json
llm-graph6/: README.md  package.json
llm-graph6/server/: server.js
llm-graph6/src/: App.jsx  index.css
llm-graph7/: package-lock.json  package.json
llm-graph7/server/: server.js
llm-graph7/src/: index.css
llm-graph7/test/: package.json
local_llm_server/: package-lock.json
local_llm_server/client/: benchmark.js  client.js  example_texts.js  ui.js  websocketThread.js
local_llm_server/server/: server.js  websocketHandler.js
node_projects/: package.json
node_projects/local_llm_server/: package.json
node_projects/photollama/: photo_analyzer.js  server.js
node_projects/tools/: README.md  package.json  tsconfig.json
ollama-demo/public/: index.html
ollama-demo/server/: server.js
photollama/: config.js
photollama/public/: index.html
python-projects/: pyproject.toml
python-projects/cacher_api2/: demo.py  dependencies.py  main.py  models.py  requirements.txt
python-projects/cacher_api2/routers/: cache.py
python-projects/cacher_api2/services/: cache_service.py
python-projects/cacher_api3/: .gitignore  README.md  demo-template.py  demo2.py  demo3.py  demo4.py  main.py  pyproject.toml
python-projects/cacher_api3/api/routes/: __init__.py  analysis.py  generation.py  state.py
python-projects/cacher_api3/core/: model_loader.py  state_manager.py
python-projects/cacher_api3/tests/: test_api.py
python-projects/cacher_api3/utils/: logging.py
python_projects/: .gitignore  pyproject.toml  yeet.sh
python_projects/average/: BLOGPOST.md  README.md  main.py  test_lambada.py  test_swag.py
python_projects/cacher/: README.md  api-test.py  demo.py  mask-test.py  test_generate_chat.py  test_seeding.py  zero-shot-test.py
python_projects/cacher_api2/: schemas.py  utils.py
python_projects/cacher_api2/routers/: generation.py
python_projects/cacher_api2/services/: generation_service.py
python_projects/cacher_api2/tests/: conftest.py  test_api.py  test_benchmarks.py
python_projects/cacher_api3/: README-next.md  README.md  __init__.py  config.py  dataset_demo.py  demo.py  demo4.py  main.py  reward_model_demo.py  reward_model_demo_cached.py
python_projects/cacher_api3/api/: __init__.py
python_projects/cacher_api3/api/routes/: analysis.py  generation.py  state.py
python_projects/cacher_api3/core/: __init__.py  generation_utils.py  state_manager.py
python_projects/cacher_api3/demos/dataset_demo/: server.py
python_projects/cacher_api3/demos/dataset_demo/static/: index.html
python_projects/cacher_api3/docs/: advanced_usage.md  development.md  error_handling.md  faq.md  getting_started.md  index.md
python_projects/cacher_api3/docs/api_reference/: analysis.md  generation.md  index.md  models.md  state.md
python_projects/cacher_api3/docs/core_concepts/: index.md  operations.md  states.md
python_projects/cacher_api3/tests/: conftest.py  test_api.py
python_projects/cacher_api3/utils/: __init__.py  cache.py
python_projects/infinite_tokens/: README.md  __init__.py  console_handler.py  example_storyteller.py  http_server.py  main.py  test_generator.py  token_generator.py  websocket_server.py
python_projects/infinite_tokens/static/: index.html
python_projects/sentiment_service/: .vastai_deploy_status  API_DOCUMENTATION.md  README.md  deploy.sh  deploy_to_vastai.sh  fabfile.py  pyproject.toml  test_client.py  vastai_deploy.sh
python_projects/sentiment_service/src/: analyzer.py  client.py
python_projects/smol_hello/: README.md  pyproject.toml
python_projects/smol_hello/src/smol_hello/: __init__.py  api.py  main.py
python_projects/smol_hello/src/smol_hello/static/: index.html
python_projects/tiny_gpt/: tokenizer_state.json
python_projects/tokenlab/: README.md  pyproject.toml  requirements.txt
python_projects/tokenlab/backend/tokenlab/: main.py  model.py
python_projects/tokenlab/frontend/: ascii.html  ascii.js  index.html  script.js  style.css
python_projects/training/: README.md  blog_post.md  demo.py  main.py
python_projects/training/tests/: conftest.py  test_generation.py  test_model.py  test_tokenizer.py  test_training.py
python_projects/training/tiny_gpt/: config.json  generation_config.json  model.safetensors  special_tokens_map.json  tokenizer.json  tokenizer_config.json
python_projects/training_next/: README.md  __init__.py  blogpost.md  dataset_utils.py  demo.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo6_compute.py  demo6_visualize.py  demo7_analysis.html  demo7_suite.py  main.py  model_trainer.py  requirements.txt  tokenizer_trainer.py  visualization_utils.py
python_projects/training_next/tests/: __init__.py  conftest.py  test_dataset_utils.py  test_model_trainer.py  test_tokenizer_trainer.py
python_projects/vast_search/: main.py
sample_data/: book_structure.json
sandbox/: epub.js  epub_gpt.js  main.js
sandbox/omniparser/: main.py
sandbox/video_sandbox/: .gitignore  (+4 more)
video_sandbox/: main.py
(+122 files in other folders)
