[tool.poetry]
name = "cacher-api3"  # Changed the name to match the folder
version = "1.0.0"
description = "Cacher API v3 project"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
torch = "^2.2.0"
transformers = "^4.36.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
rich = "^13.7.0"
httpx = "^0.26.0"
colorama = "^0.4.6"
termcolor = "^2.4.0"
datasets = "^2.17.1" # Added datasets
bitsandbytes = "^0.45.0"
vastai = "^0.2.8"
tabulate = "^0.9.0"
accelerate = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-benchmark = "^4.0.0"
python-multipart = "^0.0.6"

[tool.poetry.group.llm-graph.dependencies]
networkx = "^3.2.0"
graphviz = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-server = "uvicorn cacher_api3.main:app --reload"

[virtualenvs]
in-project = true