[tool.poetry]
name = "ai-garden"
version = "0.1.0"
description = "AI experiments and projects"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
transformers = {extras = ["torch"], version = "^4.48.1"}
datasets = "^2.15.0"
tokenizers = "^0.21.0"
numpy = "^1.24.0"
pillow = "^11.1.0"
rich = "^13.9.4"
python-dotenv = "^1.0.1"
einops = "^0.8.0"
torchvision = "^0.20.1"
pyvips = "^2.2.3"
psutil = "^6.1.1"
protobuf = "^5.29.3"
huggingface-hub = "^0.27.1"
llama-cpp-python = "^0.3.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
hypothesis = "^6.82.6"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["training/tests", "training_next/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=training --cov=training_next --cov-report=html"