[tool.poetry]
name = "cacher_api3"
version = "1.0.0"
description = "A stateful caching API for language models"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
torch = "^2.2.0"
transformers = "^4.36.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-benchmark = "^4.0.0"
python-multipart = "^0.0.6"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 