[tool.poetry]
name = "sentiment-service"
version = "0.1.0"
description = "Simple WebSocket-based sentiment analysis service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
websockets = "^12.0"
transformers = "^4.36.0"
rich = "^13.7.0"
fabric = "^3.2.2"
nvitop = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
